# BillBox-V2

./: .gitignore  README.md  docker-compose.yml  run.bat  run.py  run.sh
backend/: main.py  requirements.txt
backend/routes/: auth.py  calendar.py  invoice.py
frontend/: README.md  callback.html  index.html
services/ocr/: README.md  billbox_ocr.py  build.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_python_bindings.py
services/ocr/cpp/: python_bindings.cpp
services/ocr/src/: extractor.py  ocr_engine.py  pipeline.py
services/ocr/tests/: __init__.py  test_extractor.py  test_ocr_engine.py  test_pipeline.py  test_python_bindings.py
services/preprocessing/: CMakeLists.txt
services/preprocessing/include/: contrast.h  deskew.h  filter.h  grayscale.h  image.h  pipeline.h  resize.h  threshold.h
services/preprocessing/src/: contrast.cpp  deskew.cpp  filter.cpp  grayscale.cpp  image.cpp  main.cpp  pipeline.cpp  resize.cpp  threshold.cpp
